test/hotCases/errors/events/h.js
import i from "./i";
export default i;

if (module.hot) {
	module.hot.accept("./i");
}
